fixed heights and scrollbar

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,5 +1,3 @@
-@import"jquery.mCustomScrollbar.css";
-/*// @import url("http://polymaps.org/style.css");*/
 
 .leftHalf {
     width: 80%;
@@ -74,7 +72,7 @@ arc.warehouseButton {
     fill-opacity: .5;
 }
 #map {
-    height: 600pc;
+    height: auto;
 }
 #tooltip {
     position: absolute;
@@ -152,10 +150,10 @@ label, input[type="radio"] {
     background: #111;
 }
 #sidebar {
-    height: 100%;
     background: #111;
     font-size: 10px;
     font-family: 'Futura', sans-serif;
+    overflow: auto;    
 }
 .trHighlighted {
     background-color: white;
@@ -164,7 +162,7 @@ label, input[type="radio"] {
     color: #FFCC00;
     padding-right: 1em;
     padding-left: 1em;
-    overflow-y: auto;
+    overflow: auto;
     font-size: 10px;
 }
 .inefPath {
@@ -181,7 +179,7 @@ label, input[type="radio"] {
 div#map {
     padding-left: 1em;
     background: #111;
-    height: 100%;
+    /*height: 100%;*/
     border: none;
 }
 svg {
